--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ssot-codegen",
   "private": true,
   "version": "0.3.0",
+  "type": "module",
   "workspaces": [
     "packages/*",
     "examples/*"
