feat: add 3 production-ready example schemas (demo, blog, ecommerce)
- Add demo-example: ultra-light single Todo table for learning
- Add blog-example: full blog platform with 7 models (Author, Post, Comment, Category, Tag)
- Add ecommerce-example: complete online store with 17 models (Product, Order, Customer, Cart, Payment, etc.)
- Add npm scripts: examples:all, examples:demo, examples:blog, examples:ecommerce
- Add testing scripts: test:demo, test:blog, test:ecommerce, test:examples
- Add master test runner: scripts/test-all-examples.js
- Add comprehensive documentation: EXAMPLES.md, QUICKSTART.md
- Update README.md with examples section
- Each example includes generation scripts, test suites, and detailed README

Examples demonstrate:
- Simple to complex schema patterns
- 1-to-many and many-to-many relationships
- RBAC and authentication patterns
- Real-world production schemas
- Complete 'websites in a box'

--- a/package.json
+++ b/package.json
@@ -12,7 +12,20 @@
     "build": "pnpm -r --filter ./packages/* run build",
     "clean": "rimraf packages/*/dist",
     "lint": "echo \"(stub) run eslint here\"",
-    "generate-example": "node examples/minimal/scripts/generate.js"
+    
+    "examples:all": "pnpm run examples:demo && pnpm run examples:blog && pnpm run examples:ecommerce",
+    "examples:demo": "cd examples/demo-example && pnpm run generate",
+    "examples:blog": "cd examples/blog-example && pnpm run generate",
+    "examples:ecommerce": "cd examples/ecommerce-example && pnpm run generate",
+    "examples:minimal": "node examples/minimal/scripts/generate.js",
+    
+    "test:examples": "node scripts/test-all-examples.js",
+    "test:demo": "cd examples/demo-example && pnpm run test",
+    "test:blog": "cd examples/blog-example && pnpm run test",
+    "test:ecommerce": "cd examples/ecommerce-example && pnpm run test",
+    
+    "demo": "pnpm run examples:demo && pnpm run test:demo",
+    "full-test": "pnpm run build && pnpm run examples:all && pnpm run test:examples"
   },
   "devDependencies": {
     "typescript": "^5.4.0",
