--- a/examples/demo-example/package.json
+++ b/examples/demo-example/package.json
@@ -1,16 +1,34 @@
 {
-  "name": "ssot-example-demo",
-  "private": true,
-  "version": "0.4.0",
+  "name": "demo-example",
+  "version": "1.0.0",
   "type": "module",
   "description": "Ultra-light demo: Single table Todo with one API route",
   "scripts": {
-    "generate": "node ./scripts/generate.js",
-    "test": "node ./scripts/test.js"
+    "dev": "tsx watch src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "generate": "prisma generate && node scripts/generate.js",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate dev",
+    "db:studio": "prisma studio",
+    "lint": "tsc --noEmit",
+    "test": "node --test"
+  },
+  "dependencies": {
+    "@prisma/client": "^5.20.0",
+    "zod": "^3.23.8",
+    "dotenv": "^16.4.5",
+    "cors": "^2.8.5",
+    "helmet": "^7.1.0",
+    "express": "^4.19.2",
+    "express-async-errors": "^3.1.1"
   },
   "devDependencies": {
-    "@ssot-codegen/gen": "workspace:*",
-    "typescript": "^5.4.0"
+    "typescript": "^5.4.0",
+    "tsx": "^4.7.1",
+    "prisma": "^5.20.0",
+    "@types/node": "^20.11.0",
+    "@types/express": "^4.17.21",
+    "@types/cors": "^2.8.17"
   }
 }
-
