--- a/examples/demo-example/package.json
+++ b/examples/demo-example/package.json
@@ -2,33 +2,53 @@
   "name": "demo-example",
   "version": "1.0.0",
   "type": "module",
-  "description": "Ultra-light demo: Single table Todo with one API route",
+  "description": "Ultra-light demo with flexible dependencies",
+  "packageManager": "pnpm@9.0.0",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "build": "tsc",
+    "build": "rimraf dist && tsc",
     "start": "node dist/server.js",
     "generate": "prisma generate && node scripts/generate.js",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio",
-    "lint": "tsc --noEmit",
-    "test": "node --test"
+    "typecheck": "tsc --noEmit",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "ci": "npm run typecheck && npm run test"
   },
   "dependencies": {
-    "@prisma/client": "^5.20.0",
-    "zod": "^3.23.8",
-    "dotenv": "^16.4.5",
+    "@prisma/client": "^5.22.0",
+    "zod": "^3.25.0",
+    "dotenv": "^17.2.0",
     "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "express": "^4.19.2",
-    "express-async-errors": "^3.1.1"
+    "helmet": "^8.1.0",
+    "compression": "^1.7.4",
+    "pino": "^9.5.0",
+    "pino-http": "^10.3.0",
+    "http-errors": "^2.0.0",
+    "express-rate-limit": "^7.4.0",
+    "express": "^4.21.0",
+    "express-async-errors": "^3.1.1",
+    "morgan": "^1.10.0",
+    "cookie-parser": "^1.4.6"
   },
   "devDependencies": {
-    "typescript": "^5.4.0",
-    "tsx": "^4.7.1",
-    "prisma": "^5.20.0",
-    "@types/node": "^20.11.0",
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17"
-  }
+    "typescript": "^5.9.0",
+    "tsx": "^4.20.0",
+    "prisma": "^5.22.0",
+    "@types/node": "^22.10.0",
+    "pino-pretty": "^11.4.0",
+    "rimraf": "^6.0.0",
+    "@types/express": "^5.0.0",
+    "vitest": "^2.1.0",
+    "@vitest/coverage-v8": "^2.1.0",
+    "supertest": "^7.0.0",
+    "@types/supertest": "^6.0.0"
+  },
+  "_generatedBy": "ssot-codegen with production profile"
 }
