--- a/examples/demo-example/package.json
+++ b/examples/demo-example/package.json
@@ -38,6 +38,7 @@
     "cookie-parser": "^1.4.6"
   },
   "devDependencies": {
+    "@ssot-codegen/gen": "workspace:*",
     "typescript": "^5.9.0",
     "tsx": "^4.20.0",
     "prisma": "^5.22.0",
