feat: add ready-to-use .env files to all examples
Created .env files with working defaults: root user, blank password, unique database names per example (ssot_demo, ssot_blog, ssot_ecommerce, ssot_minimal). Examples now work immediately without manual configuration.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,13 @@ dist/
 *.tsbuildinfo
 /examples/*/gen/
 tsconfig.paths.json
+
+# Block .env in root and packages (production)
+/.env
+/.env.local
+/.env.*.local
+/packages/*/.env
+/packages/*/.env.local
+
+# Allow .env in examples (they have safe defaults for development)
+!examples/*/.env
