--- a/examples/blog-example/.env
+++ b/examples/blog-example/.env
@@ -19,3 +19,6 @@ LOG_LEVEL=debug
 JWT_SECRET=blog-secret-change-in-production-xyz789
 JWT_EXPIRES_IN=7d
 JWT_REFRESH_EXPIRES_IN=30d
+
+# Auto-generated DATABASE_URL
+DATABASE_URL="mysql://root@localhost:3306/ssot_blog"
