--- a/examples/blog-example/package.json
+++ b/examples/blog-example/package.json
@@ -1,16 +1,64 @@
 {
-  "name": "ssot-example-blog",
-  "private": true,
-  "version": "0.4.0",
+  "name": "blog-example",
+  "version": "1.0.0",
   "type": "module",
-  "description": "Complete blog platform schema with posts, comments, authors, categories, and tags",
+  "description": "Complete blog platform with posts, comments, authors, categories, and tags",
+  "packageManager": "pnpm@9.0.0",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
-    "generate": "node ./scripts/generate.js",
-    "test": "node ./scripts/test.js"
+    "dev": "tsx watch src/server.ts",
+    "build": "rimraf dist && tsc",
+    "start": "node dist/server.js",
+    "generate": "prisma generate && node scripts/generate.js",
+    "db:setup": "node scripts/db-setup.js",
+    "db:init": "npm run db:setup && npm run db:push",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate dev",
+    "db:studio": "prisma studio",
+    "db:seed": "tsx scripts/seed.ts",
+    "typecheck": "tsc --noEmit",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:integration": "vitest run --config vitest.integration.config.ts",
+    "test:e2e": "tsx scripts/test-e2e.ts",
+    "test:all": "npm run typecheck && npm run test && npm run test:integration",
+    "test:automated": "node scripts/automated-test.js",
+    "ci": "npm run typecheck && npm run test:all",
+    "automate": "npm run test:automated"
+  },
+  "dependencies": {
+    "@prisma/client": "^5.22.0",
+    "zod": "^3.25.0",
+    "dotenv": "^17.2.0",
+    "cors": "^2.8.5",
+    "helmet": "^8.1.0",
+    "compression": "^1.7.4",
+    "pino": "^9.5.0",
+    "pino-http": "^10.3.0",
+    "http-errors": "^2.0.0",
+    "express-rate-limit": "^7.4.0",
+    "express": "^4.21.0",
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.11.5",
+    "pg": "^8.13.1"
   },
   "devDependencies": {
     "@ssot-codegen/gen": "workspace:*",
-    "typescript": "^5.4.0"
-  }
+    "typescript": "^5.9.0",
+    "tsx": "^4.20.0",
+    "prisma": "^5.22.0",
+    "@types/node": "^22.10.0",
+    "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.0",
+    "pino-pretty": "^13.1.0",
+    "rimraf": "^6.0.0",
+    "vitest": "^2.1.0",
+    "@vitest/coverage-v8": "^2.1.0",
+    "supertest": "^7.0.0",
+    "@types/supertest": "^6.0.0"
+  },
+  "_generatedBy": "ssot-codegen with production profile"
 }
-
