--- a/examples/demo-example/.env
+++ b/examples/demo-example/.env
@@ -19,3 +19,6 @@ LOG_LEVEL=debug
 JWT_SECRET=demo-secret-change-in-production-abc123
 JWT_EXPIRES_IN=7d
 JWT_REFRESH_EXPIRES_IN=30d
+
+# Auto-generated DATABASE_URL
+DATABASE_URL="mysql://root@localhost:3306/ssot_demo"
