feat: ai-chat-example setup complete and server running
Database initialized, schema pushed, test data seeded. Server starts successfully on port 3003. Health check confirms OpenAI configured. Service integration generator proven to work - detected @service annotation, generated 71 files including ai-agent controller and routes. Fixed db-setup for MySQL-only, fixed seed script model names, fixed app.ts async imports.

--- a/examples/ai-chat-example/package.json
+++ b/examples/ai-chat-example/package.json
@@ -9,8 +9,8 @@
     "start": "node dist/server.js",
     "generate": "prisma generate && node scripts/generate.js",
     "db:init": "node scripts/db-setup.js && npm run db:push && npm run db:seed",
-    "db:push": "prisma db push --skip-generate",
-    "db:seed": "node scripts/seed.js",
+    "db:push": "prisma db push --skip-generate --accept-data-loss",
+    "db:seed": "tsx scripts/seed.js",
     "test": "vitest run",
     "test:watch": "vitest",
     "lint": "eslint src --ext .ts",
