--- a/examples/ai-chat-example/package.json
+++ b/examples/ai-chat-example/package.json
@@ -18,9 +18,12 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@aws-sdk/client-s3": "^3.716.0",
+    "@aws-sdk/s3-request-presigner": "^3.716.0",
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
     "express-rate-limit": "^7.5.0",
+    "multer": "^1.4.5-lts.1",
     "cors": "^2.8.5",
     "helmet": "^8.0.0",
     "zod": "^3.24.1",
@@ -36,6 +39,7 @@
     "@types/node": "^22.10.2",
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
     "prisma": "^5.22.0",
     "typescript": "^5.7.2",
     "tsx": "^4.19.2",
