--- a/examples/blog-example/package.json
+++ b/examples/blog-example/package.json
@@ -30,35 +30,36 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
-    "zod": "^3.25.0",
-    "dotenv": "^17.2.0",
-    "cors": "^2.8.5",
-    "helmet": "^8.1.0",
     "compression": "^1.7.4",
-    "pino": "^9.5.0",
-    "pino-http": "^10.3.0",
-    "http-errors": "^2.0.0",
-    "express-rate-limit": "^7.4.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
     "express": "^4.21.0",
     "express-async-errors": "^3.1.1",
+    "express-rate-limit": "^7.4.0",
+    "helmet": "^8.1.0",
+    "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.5",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "pino": "^9.5.0",
+    "pino-http": "^10.3.0",
+    "zod": "^3.25.0"
   },
   "devDependencies": {
     "@ssot-codegen/gen": "workspace:*",
-    "typescript": "^5.9.0",
-    "tsx": "^4.20.0",
-    "prisma": "^5.22.0",
-    "@types/node": "^22.10.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.0",
-    "pino-pretty": "^13.1.0",
-    "rimraf": "^6.0.0",
-    "vitest": "^2.1.0",
+    "@types/node": "^22.10.0",
+    "@types/supertest": "^6.0.0",
     "@vitest/coverage-v8": "^2.1.0",
+    "pino-pretty": "^13.1.0",
+    "prisma": "^5.22.0",
+    "rimraf": "^6.0.0",
     "supertest": "^7.0.0",
-    "@types/supertest": "^6.0.0"
+    "tsx": "^4.20.0",
+    "typescript": "^5.9.0",
+    "vitest": "^2.1.0"
   },
   "_generatedBy": "ssot-codegen with production profile"
 }
