--- a/packages/sdk-runtime/package.json
+++ b/packages/sdk-runtime/package.json
@@ -13,8 +13,8 @@
     "test": "vitest run",
     "test:watch": "vitest"
   },
-  "dependencies": {},
   "devDependencies": {
+    "@vitest/coverage-v8": "^2.1.0",
     "vitest": "^2.1.9"
   }
 }
