--- a/packages/sdk-runtime/tsconfig.json
+++ b/packages/sdk-runtime/tsconfig.json
@@ -5,6 +5,12 @@
     "rootDir": "src"
   },
   "include": [
-    "src"
+    "src/**/*.ts"
+  ],
+  "exclude": [
+    "src/**/*.test.ts",
+    "node_modules",
+    "dist",
+    "coverage"
   ]
 }
