feat: Implement thin SDK facade pattern with helpers namespace
ARCHITECTURE CHANGES:
- Consistent 7-method interface for all model clients (list, get, create, update, delete, findOne, count)
- Domain-specific methods moved to .helpers namespace
- Generic patterns over specific methods for better DX

IMPLEMENTATION:
- Added findOne() method to BaseModelClient for generic field lookups
- Enhanced count() to support filtered counting
- Refactored SDK generator to produce thin clients with helpers
- Created SDK documentation generator (README, API-REFERENCE, ARCHITECTURE)
- Generated quick-start helpers and type exports

DEVELOPER EXPERIENCE:
- Learn 7 methods, use on ALL models (vs 50+ model-specific methods)
- Helpers provide optional shortcuts (e.g., .helpers.findBySlug())
- State changes via data (update) instead of method names (publish/approve)
- Self-documenting: type api.post. to see clean interface
- Auto-generated documentation as table of contents

BUILD TOOLING:
- Added tsc-alias to blog-example for path alias resolution
- Updated build script: tsc && tsc-alias
- Clean @ aliases in source, resolved to relative paths at build time

BENEFITS:
- 86% reduction in methods to learn (7 vs 50+)
- Consistent mental model across all domains
- Predictable patterns (know one model, know all)
- Better scalability (grows sub-linearly)
- Improved discoverability via helpers namespace

--- a/examples/blog-example/package.json
+++ b/examples/blog-example/package.json
@@ -11,7 +11,7 @@
     "setup": "pnpm install && pnpm generate && pnpm db:setup",
     "generate": "prisma generate && node scripts/generate.js",
     "dev": "tsx watch src/server.ts",
-    "build": "rimraf dist && tsc",
+    "build": "rimraf dist && tsc && tsc-alias",
     "start": "node dist/src/server.js",
     "db:setup": "node scripts/db-setup.js",
     "db:push": "prisma db push",
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@ssot-codegen/sdk-runtime": "workspace:*",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
@@ -52,6 +53,7 @@
     "prisma": "^5.22.0",
     "rimraf": "^6.0.0",
     "supertest": "^7.0.0",
+    "tsc-alias": "^1.8.16",
     "tsx": "^4.20.0",
     "typescript": "^5.9.0",
     "vitest": "^2.1.0"
