--- a/examples/blog-example/tsconfig.json
+++ b/examples/blog-example/tsconfig.json
@@ -4,10 +4,14 @@
     "rootDir": ".",
     "outDir": "./dist",
     "paths": {
-      "@gen/*": ["./gen/*"]
-    }
+      "@gen/*": ["./gen/*"],
+      "@/*": ["./src/*"],
+      "@ssot-codegen/sdk-runtime": ["../../packages/sdk-runtime/dist"]
+    },
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": false
   },
   "include": ["src/**/*", "gen/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "src/**/*.test.ts", "tests/**/*", "../../packages/**/*"]
 }
 
