--- a/examples/blog-example/package.json
+++ b/examples/blog-example/package.json
@@ -39,18 +39,23 @@
     "pg": "^8.13.1",
     "pino": "^9.5.0",
     "pino-http": "^10.3.0",
+    "react-dom": "^19.2.0",
     "zod": "^3.25.0"
   },
   "devDependencies": {
     "@ssot-codegen/gen": "workspace:*",
+    "@tanstack/react-query": "^5.90.6",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.0",
     "@types/node": "^22.10.0",
+    "@types/react": "^18.3.12",
     "@types/supertest": "^6.0.0",
     "@vitest/coverage-v8": "^2.1.0",
     "pino-pretty": "^13.1.0",
     "prisma": "^5.22.0",
+    "react": "^19.2.0",
     "rimraf": "^6.0.0",
     "supertest": "^7.0.0",
     "tsc-alias": "^1.8.16",
