--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "knip": "knip",
     "madge": "madge --circular --extensions ts packages/gen/src",
     "check:all": "pnpm run typecheck && pnpm run lint && pnpm run knip && pnpm run madge",
+    "ssot": "node packages/cli/dist/cli.js",
     "examples:all": "pnpm run examples:minimal && pnpm run examples:blog && pnpm run examples:ecommerce && pnpm run examples:ai-chat",
     "examples:minimal": "cd examples/minimal && pnpm run generate",
     "examples:blog": "cd examples/blog-example && pnpm run generate",
