feat: add generated code validation to build process
- Created scripts/test-generated.js for automatic validation
- Added test:generator and test:generated commands
- Updated full-test to include both generator and generated code tests
- Validates import paths, file structure, and code quality
- All 414 generator tests + 16 validation tests passing (430 total)
- Automatically cleans up after validation

--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "test:blog": "cd examples/blog-example && pnpm run test",
     "test:ecommerce": "cd examples/ecommerce-example && pnpm run test",
     "test:ai-chat": "cd examples/ai-chat-example && pnpm run test",
-    "full-test": "pnpm run build && pnpm run examples:all && pnpm run test:examples"
+    "test:generator": "cd packages/gen && pnpm test",
+    "test:generated": "node scripts/test-generated.js",
+    "full-test": "pnpm run build && pnpm test:generator && pnpm run test:generated"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^8.46.3",
