--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "test:ai-chat": "cd examples/ai-chat-example && pnpm run test",
     "test:generator": "cd packages/gen && pnpm test",
     "test:generated": "node scripts/test-generated.js",
-    "full-test": "pnpm run build && pnpm test:generator && pnpm run test:generated"
+    "full-test": "pnpm run build && pnpm run lint && pnpm test:generator && pnpm run test:generated"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^8.46.3",
