feat: Integrate plugin system into generation pipeline - BATCH 1.1 complete

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "paths": {
       "@gen/*": [
-        "C:\\wamp64\\www\\ssot-codegen\\generated\\test-validation\\src/*"
+        "C:\\wamp64\\www\\ssot-codegen\\generated\\01-basic-blog-2\\src/*"
       ]
     }
   }
