--- a/env.development.template
+++ b/env.development.template
@@ -7,8 +7,95 @@
 
 # See SETUP_TESTING_ENV.md for full documentation
 
-# Database
+# ============================================================
+# DATABASE
+# ============================================================
 DATABASE_URL="mysql://root@localhost:5432/dev_openai_db"
 
-# AI Providers
+# ============================================================
+# AUTHENTICATION - Google OAuth
+# ============================================================
+# Get credentials: https://console.cloud.google.com/apis/credentials
+GOOGLE_CLIENT_ID="your-client-id.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="your-client-secret-here"
+GOOGLE_CALLBACK_URL="http://localhost:3000/auth/google/callback"
+
+# JWT Configuration (for JWT-based auth)
+JWT_SECRET="your-jwt-secret-change-in-production-use-long-random-string"
+JWT_EXPIRES_IN="7d"
+
+# Session Configuration (alternative to JWT)
+# SESSION_SECRET="your-session-secret-change-in-production"
+# SESSION_MAX_AGE="604800000"
+
+# ============================================================
+# AI PROVIDERS
+# ============================================================
+# OpenAI (ChatGPT, GPT-4, etc.)
 OPENAI_API_KEY="sk-your-openai-key-here"
+OPENAI_MODEL="gpt-3.5-turbo"
+
+# Anthropic Claude
+# ANTHROPIC_API_KEY="sk-ant-your-key-here"
+
+# Google Gemini
+# GEMINI_API_KEY="your-gemini-key-here"
+
+# xAI Grok
+# GROK_API_KEY="your-grok-key-here"
+
+# OpenRouter (multi-model)
+# OPENROUTER_API_KEY="your-openrouter-key-here"
+
+# ============================================================
+# VOICE AI
+# ============================================================
+# Deepgram (Speech-to-Text)
+# DEEPGRAM_API_KEY="your-deepgram-key-here"
+
+# ElevenLabs (Text-to-Speech)
+# ELEVENLABS_API_KEY="your-elevenlabs-key-here"
+
+# ============================================================
+# CLOUD STORAGE
+# ============================================================
+# AWS S3
+# AWS_ACCESS_KEY_ID="your-aws-access-key"
+# AWS_SECRET_ACCESS_KEY="your-aws-secret-key"
+# AWS_REGION="us-east-1"
+# S3_BUCKET="your-bucket-name"
+
+# Cloudflare R2
+# R2_ACCOUNT_ID="your-r2-account-id"
+# R2_ACCESS_KEY_ID="your-r2-access-key"
+# R2_SECRET_ACCESS_KEY="your-r2-secret-key"
+# R2_BUCKET="your-r2-bucket"
+
+# Cloudinary
+# CLOUDINARY_CLOUD_NAME="your-cloud-name"
+# CLOUDINARY_API_KEY="your-api-key"
+# CLOUDINARY_API_SECRET="your-api-secret"
+
+# ============================================================
+# PAYMENTS
+# ============================================================
+# Stripe
+# STRIPE_SECRET_KEY="sk_test_your-stripe-secret-key"
+# STRIPE_PUBLISHABLE_KEY="pk_test_your-stripe-publishable-key"
+# STRIPE_WEBHOOK_SECRET="whsec_your-webhook-secret"
+
+# PayPal
+# PAYPAL_CLIENT_ID="your-paypal-client-id"
+# PAYPAL_CLIENT_SECRET="your-paypal-client-secret"
+# PAYPAL_MODE="sandbox"
+
+# ============================================================
+# EMAIL SERVICES
+# ============================================================
+# SendGrid
+# SENDGRID_API_KEY="SG.your-sendgrid-key-here"
+# SENDGRID_FROM_EMAIL="noreply@yourdomain.com"
+
+# Mailgun
+# MAILGUN_API_KEY="your-mailgun-key-here"
+# MAILGUN_DOMAIN="mg.yourdomain.com"
