feat: Google OAuth plugin working - generated Passport.js auth with JWT

--- a/env.development.template
+++ b/env.development.template
@@ -16,9 +16,12 @@ DATABASE_URL="mysql://root@localhost:5432/dev_openai_db"
 # AUTHENTICATION - Google OAuth
 # ============================================================
 # Get credentials: https://console.cloud.google.com/apis/credentials
+ENABLE_GOOGLE_AUTH=true
 GOOGLE_CLIENT_ID="your-client-id.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="your-client-secret-here"
 GOOGLE_CALLBACK_URL="http://localhost:3000/auth/google/callback"
+AUTH_STRATEGY="jwt"
+AUTH_USER_MODEL="User"
 
 # JWT Configuration (for JWT-based auth)
 JWT_SECRET="your-jwt-secret-change-in-production-use-long-random-string"
