feat: file extensions audit and NodeNext upgrade
## File Extensions Audit
- âœ… Verified all imports use .js extensions (100% compliance)
- âœ… No .ts extensions in imports (only in comments)
- âœ… Package.json correctly configured (type: module)
- âœ… Build succeeds with no errors
- âœ… Generated code uses correct extensions
- âœ… Barrel exports correct
- âœ… Dynamic imports correct

## TypeScript Configuration Upgrade
- Upgraded module: ESNext â†’ NodeNext
- Upgraded moduleResolution: Node â†’ NodeNext
- Removed conflicting moduleResolution from cli package
- All packages build successfully

## Documentation
Created docs/FILE_EXTENSIONS_AUDIT.md with:
- Comprehensive audit results
- Best practices comparison
- Testing checklist
- Recommendations for future improvements

## Benefits
- Better Node.js ESM support
- More accurate type checking
- Enforces .js extensions at compile time
- Future-proof configuration

Addresses architectural roadmap:
âœ… File extension audit (6 hours investigation)

--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -2,8 +2,7 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "rootDir": "./src",
-    "outDir": "./dist",
-    "moduleResolution": "bundler"
+    "outDir": "./dist"
   },
   "include": ["src/**/*"]
 }
