--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "paths": {
       "@gen/*": [
-        "C:\\wamp64\\www\\ssot-codegen\\generated\\minimal-1\\src/*"
+        "C:\\wamp64\\www\\ssot-codegen\\generated\\ai-chat-example-17\\src/*"
       ]
     }
   }
