refactor: additional PhaseRunner architecture improvements
- DRY up defaultPaths into shared module
  * Extract defaultPaths to config/default-paths.ts
  * Eliminates duplication between index-new.ts and GenerateCodePhase
  * Single source of truth for layer names and path configuration

- Strengthen PhaseContext typing
  * Add comprehensive JSDoc documentation for PhaseContext fields
  * Document which phase contributes each field
  * Add PhaseResults helper for type-safe result creation
  * Add generic type parameter to GenerationPhase<TData>

- Make I/O concurrency configurable via CLI
  * Add --concurrency flag (default: 100)
  * Add --format flag to enable Prettier formatting
  * Add --format-concurrency flag (default: 10)
  * CLI options set environment variables before generation

- Document plugin-phase extension API
  * Add phase order reference table (0-13)
  * Document fractional ordering for inserting between phases
  * Add conditional phase injection pattern
  * Note planned insertBefore/insertAfter API for future

- Add barrel validation to CI
  * Create scripts/validate-barrels.js validation script
  * Checks all model folders have index.ts barrels
  * Verifies barrels export at least one symbol
  * Integrated into CI workflow (Linux only)
  * Added pnpm validate:barrels script

- Final docs sync and organization
  * Organize README.md documentation into sections
  * Add all new documentation links
  * Group by Getting Started, Architecture, Plugins, Advanced
  * All doc links verified working

All builds passing, ready for future milestones

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -181,6 +181,10 @@ jobs:
           test -f generated/minimal-1/package.json
           echo "✅ Generation successful on ${{ matrix.os }}"
       
+      - name: Validate barrels (Unix only)
+        if: runner.os == 'Linux'
+        run: pnpm validate:barrels
+      
       - name: Verify generation (Windows)
         if: runner.os == 'Windows'
         shell: pwsh
