feat: add performance metrics and final polish
- Clear pathMap between runs
  * Call clearTrackedPaths() at start of PhaseRunner.run()
  * Prevents state bleeding across multiple generations in same process

- Add per-phase performance metrics
  * Track duration (ms) and filesGenerated for each phase
  * Store in phaseMetrics array in context
  * Include in generation.json manifest
  * Helps identify performance regressions

- Comprehensive troubleshooting guide
  * Common issues: permissions, memory, paths, database
  * Platform-specific: Windows, macOS, Linux
  * Plugin issues and solutions
  * CI/CD troubleshooting
  * Error message reference
  * Added to README documentation links

User contributions acknowledged:
- Auto-setup functionality in CLI (--setup flag)
- Auto-install dependencies and generate Prisma client
- Create .env with database-appropriate URLs
- Optional test running with --test flag

All builds passing, documentation complete

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "paths": {
       "@gen/*": [
-        "C:\\wamp64\\www\\ssot-codegen\\generated\\ai-chat-example-17\\src/*"
+        "C:\\wamp64\\www\\ssot-codegen\\generated\\05-image-optimizer-1\\src/*"
       ]
     }
   }
