fix: switch to PhaseRunner as default and fix performance metrics
- Make PhaseRunner the default generator
  * Update index.ts to export from index-new-refactored.js
  * Legacy generator still available via direct import
  * Creates generation.json instead of build.json

- Fix performance metrics capture
  * Initialize phaseMetrics array in context before loop
  * Store metrics immediately after each phase
  * WriteManifestPhase (phase 9) can now access metrics from phases 0-8
  * Metrics include: phase name, duration (ms), filesGenerated

Verification:
- âœ… Manifest includes pathMap (260 entries)
- âœ… Manifest includes outputs array (41 files)
- âœ… Version dynamically sourced (0.4.0)
- âœ… Performance metrics captured (9 phases with timing)
- âœ… CLI flags working (--concurrency, --format, --setup)
- âœ… Auto-setup working (deps, .env, Prisma)
- âœ… Barrel validation passing (19 barrels generated)
- âœ… Path tracking cleared between runs

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "paths": {
       "@gen/*": [
-        "C:\\wamp64\\www\\ssot-codegen\\generated\\05-image-optimizer-1\\src/*"
+        "C:\\wamp64\\www\\ssot-codegen\\generated\\minimal-3\\src/*"
       ]
     }
   }
