chore: prepare codebase for production npm release
Major production readiness improvements:

Repository Cleanup:
- Remove incomplete examples (demo-example, 04-social-network)
- Clear all generated projects (350+ files)
- Remove node_modules from examples
- Update .gitignore to exclude entire generated/ directory
- Add generated/.gitkeep to preserve structure

NPM Package Configuration (all 5 packages):
- Add complete metadata (author, license, repository, keywords)
- Add engines field (Node >= 18.0.0)
- Add files field to exclude dev code
- Add prepublishOnly scripts for fresh builds
- Replace workspace:* with proper semver (^0.4.0)
- Add tree-shaking hints (sideEffects: false)

CLI Improvements:
- Consolidate to single canonical CLI (packages/cli)
- Version from package.json (not hardcoded)
- Add -v, --version flags
- Remove duplicate bin entry from gen package

Code Quality Fixes:
- Fix 3 circular dependencies (0 remaining)
  * api/public-api.ts <-> implementation.ts (extracted to api/types.ts)
  * code-generator.ts <-> checklist-generator.ts (moved GeneratedFiles to generator/types.ts)
  * phase-runner.ts <-> phase-hooks.ts (moved PhaseResult to generator/types.ts)
- Fix 13 lint issues (0 errors, 0 warnings remaining)
  * Remove unused imports and variables
  * Replace all :any types with proper types (unknown, Record<string, unknown>)
- Remove legacy dead code (~900 lines)
  * Delete packages/gen/src/cli.ts
  * Delete packages/gen/src/index-new.ts
  * Remove getNextGenFolder() wrapper
- Remove duplicate runGenerator export

Enhanced Scripts:
- Add clean:build (fast CI clean)
- Add clean:deps (remove node_modules)
- Add clean:all (complete cleanup)
- Add prepublish validation

Documentation (12 new files, ~4000 lines):
- NPM_RELEASE_GUIDE.md - Step-by-step publish process
- ROADMAP.md - Future plans v0.5.0 -> v1.0.0
- Multiple quality reports and implementation details

Quality Status:
- TypeScript: 0 errors
- ESLint: 0 errors, 0 warnings
- Build: All packages c

--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,8 @@ build/
 # Example .env files are ALSO ignored (users create their own)
 examples/**/.env
 
-# Generated projects' .env files
-generated/**/.env
+# Generated projects (entire directory)
+generated/
 
 # OS files
 .DS_Store
