--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,17 +1,35 @@
 {
   "name": "@ssot-codegen/core",
   "version": "0.4.0",
+  "description": "Core types and utilities for SSOT Codegen",
+  "author": "SSOT Codegen Team",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ssot-codegen/ssot-codegen"
+  },
+  "keywords": [
+    "prisma",
+    "codegen",
+    "types",
+    "typescript"
+  ],
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist",
-    "README.md"
+    "README.md",
+    "LICENSE"
   ],
-  "scripts": {
-    "build": "tsc -p tsconfig.json"
+  "engines": {
+    "node": ">=18.0.0"
   },
-  "dependencies": {}
+  "scripts": {
+    "build": "tsc -p tsconfig.json",
+    "prepublishOnly": "pnpm run build"
+  },
+  "sideEffects": false
 }
 
 
