--- a/packages/sdk-runtime/package.json
+++ b/packages/sdk-runtime/package.json
@@ -1,20 +1,39 @@
 {
   "name": "@ssot-codegen/sdk-runtime",
   "version": "0.4.0",
+  "description": "Runtime SDK for SSOT Codegen generated clients",
+  "author": "SSOT Codegen Team",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ssot-codegen/ssot-codegen"
+  },
+  "keywords": [
+    "sdk",
+    "client",
+    "typescript",
+    "api"
+  ],
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist",
-    "README.md"
+    "README.md",
+    "LICENSE"
   ],
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "build": "tsc -p tsconfig.json",
+    "prepublishOnly": "pnpm run build",
     "test": "vitest run",
     "test:watch": "vitest"
   },
   "devDependencies": {
     "@vitest/coverage-v8": "^2.1.0",
     "vitest": "^2.1.9"
-  }
+  },
+  "sideEffects": false
 }
