--- a/packages/templates-default/package.json
+++ b/packages/templates-default/package.json
@@ -1,17 +1,36 @@
 {
   "name": "@ssot-codegen/templates-default",
   "version": "0.4.0",
+  "description": "Default code templates for SSOT Codegen",
+  "author": "SSOT Codegen Team",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ssot-codegen/ssot-codegen"
+  },
+  "keywords": [
+    "prisma",
+    "codegen",
+    "templates",
+    "typescript"
+  ],
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist",
-    "README.md"
+    "README.md",
+    "LICENSE"
   ],
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
-    "build": "tsc -p tsconfig.json"
+    "build": "tsc -p tsconfig.json",
+    "prepublishOnly": "pnpm run build"
   },
   "dependencies": {
-    "@ssot-codegen/core": "workspace:*"
-  }
+    "@ssot-codegen/core": "^0.4.0"
+  },
+  "sideEffects": false
 }
