--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -35,7 +35,7 @@
     "dev": "tsc -p tsconfig.json --watch"
   },
   "dependencies": {
-    "@ssot-codegen/gen": "^0.4.0",
+    "@ssot-codegen/gen": "workspace:*",
     "commander": "^12.0.0",
     "chalk": "^5.3.0"
   },
