feat: Add comprehensive local distribution testing infrastructure
- Created test-local-distribution.js for realistic tarball-based testing
- Created link-for-development.js for fast iteration with symlinks
- Added comprehensive documentation:
  - LOCAL_TESTING_GUIDE.md: Complete guide with all methods
  - QUICK_START_LOCAL_TESTING.md: Quick reference
  - DISTRIBUTION_SETUP_COMPLETE.md: Setup details
  - DISTRIBUTION_TEST_RESULTS.md: Test results and action items
- Added npm scripts: test:distribution and link:dev
- Updated .gitignore for .test-consumer/ and *.tgz files
- Test script successfully validates build and catches errors before distribution
- Provides realistic npm consumer experience without publishing

--- a/.gitignore
+++ b/.gitignore
@@ -41,12 +41,14 @@ yarn-error.log*
 # Testing
 coverage/
 .nyc_output/
+.test-consumer/
 
 # Misc
 *.local
 .cache/
 .temp/
 tmp/
+*.tgz
 
 # Keep these example files (safe, no real keys)
 !.env.example
