build errors fixes

--- a/packages/gen/tsconfig.json
+++ b/packages/gen/tsconfig.json
@@ -12,7 +12,10 @@
       "@/plugins/*": ["plugins/*"],
       "@/templates/*": ["templates/*"],
       "@/database/*": ["database/*"],
-      "@/api/*": ["api/*"]
+      "@/api/*": ["api/*"],
+      "@/cache/*": ["cache/*"],
+      "@/validation/*": ["validation/*"],
+      "@/builders/*": ["builders/*"]
     }
   },
   "include": [
