--- a/packages/create-ssot-app/package.json
+++ b/packages/create-ssot-app/package.json
@@ -14,7 +14,8 @@
     "build": "tsc -p tsconfig.json",
     "dev": "tsc -p tsconfig.json --watch",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:e2e": "vitest run e2e-ui-generation"
   },
   "keywords": [
     "prisma",
